fix(input, input-number, input-text): stretch the height of slot container to match with component (#12339)
**Related Issue:** #7411 

## Summary

Stretch the height of slotted content i.e., calcite-button to match with
rest of the component.

--- a/packages/calcite-components/src/components/input-text/input-text.scss
+++ b/packages/calcite-components/src/components/input-text/input-text.scss
@@ -29,8 +29,7 @@
     @apply px-2;
   }
 
-  & .action-wrapper calcite-button,
-  & .action-wrapper calcite-button button {
+  & .action-wrapper {
     @apply h-6;
   }
 
@@ -57,8 +56,7 @@
     @apply px-3;
   }
 
-  & .action-wrapper calcite-button,
-  & .action-wrapper calcite-button button {
+  & .action-wrapper {
     @apply h-8;
   }
 
@@ -85,8 +83,7 @@
     @apply px-4;
   }
 
-  & .action-wrapper calcite-button,
-  & .action-wrapper calcite-button button {
+  & .action-wrapper {
     @apply h-11;
   }
 
